# fitness-tracker

./: .env.example  .gitignore  README.md  alembic.ini  deploy.env.example  deploy.sh  docker-compose.yml  fitness-tracker-plan.md  pyproject.toml
.github/workflows/: deploy.yml
backend/: Dockerfile  cleanup_demos.py  config.py  create_user.py  main.py  schemas.py  seed_demo.py
backend/alembic/: env.py
backend/api/: auth.py  calories.py  deps.py  diary.py  exercises.py  food.py  health.py  macros.py  meal_slots.py  measurements.py  pantry.py  profile.py  routines.py  settings.py  shopping.py  steps.py  today.py  trends.py  weight.py  workouts.py
backend/auth/: security.py
backend/calories/: __init__.py  adaptive.py  engine.py
backend/demo/: seed.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
tests/: conftest.py  test_adaptive_tdee.py  test_auth.py  test_calorie_engine.py  test_demo_api.py  test_demo_cleanup.py  test_demo_seed.py  test_diary_api.py  test_food_scale.py  test_label_api.py  test_label_parse.py  test_macro_engine.py  test_macros_api.py  test_meal_slots_api.py  test_measurements_api.py  test_off_client.py  test_pantry_api.py  test_photo_api.py  test_plan_api.py  test_plan_engine.py  test_profile_api.py  test_seed_library.py  test_settings_api.py  test_shopping_api.py  test_slots.py  test_steps.py  test_suggest_api.py  test_suggest_engine.py  test_trends_api.py  test_vision_parse.py  test_weight_api.py  test_weight_trend.py  test_workout_calories.py  test_workout_progression.py  test_workouts_api.py
(+122 files in other folders)
